--- a/src/Search/component.css
+++ b/src/Search/component.css
@@ -1,5 +1,6 @@
 .Search {
   --size-form-control-padding: 8px;
+  --size-form-control-border-radius: 3px;
 }
 
 .Search {
@@ -12,7 +13,7 @@
 .Search input[type='text'] {
   margin: calc(-1 * var(--size-form-control-padding));
   padding: var(--size-form-control-padding);
-  border-radius: 3px;
+  border-radius: var(--size-form-control-border-radius);
   background-color: var(--palette-2);
   color: var(--palette-02);
   outline: none;
