--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@
   row-gap: var(--size-gap);
   padding: var(--size-gap) var(--size-wide-gap);
 }
+
+.App__Header {
+  display: grid;
+  column-gap: var(--size-gap);
+  grid-template-columns: auto 150px;
+}
