Fix style of bookmark editor button

--- a/src/Bookmarks/component.css
+++ b/src/Bookmarks/component.css
@@ -109,4 +109,5 @@
   opacity: 1;
   background-color: var(--palette-2);
   box-shadow: 0 0 calc(var(--size-folder-item-gap) * 3) var(--palette-01);
+  transition: none;
 }
