--- a/src/Bookmarks/component.css
+++ b/src/Bookmarks/component.css
@@ -15,6 +15,12 @@
   row-gap: var(--size-folder-gap);
 }
 
+.BookmarkFolders__vertical {
+  overflow-x: auto;
+  grid-auto-flow: column;
+  column-gap: var(--size-folder-gap);
+}
+
 /* set background to prevent screen flicker while loading */
 .BookmarkFolders:empty {
   height: 100vh;
