--- a/src/Preferences/component.css
+++ b/src/Preferences/component.css
@@ -8,16 +8,16 @@
   text-align: center;
 }
 
-.Preferences dialog {
+dialog.Preferences {
   padding: var(--size-wide-gap);
-  border-style: none;
   color: inherit;
   background-color: var(--palette-3);
+  border-style: none;
   border-radius: var(--size-form-control-border-radius);
   box-shadow: 0 0 var(--size-wide-gap) rgba(0, 0, 0, 0.5);
 }
 
-.Preferences dialog::backdrop {
+dialog.Preferences::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
