--- a/src/Themes/themes.css
+++ b/src/Themes/themes.css
@@ -9,7 +9,7 @@
   --theme-palette-3: #fdfdfd;
 }
 
-:root[data-theme='solarized'] {
+:root[data-theme="solarized"] {
   --theme-palette-03: #002b36;
   --theme-palette-02: #073642;
   --theme-palette-01: #586e75;
@@ -20,7 +20,7 @@
   --theme-palette-3: #fdf6e3;
 }
 
-:root[data-color-scheme='light'] {
+:root[data-color-scheme="light"] {
   --palette-3: var(--theme-palette-3);
   --palette-2: var(--theme-palette-2);
   --palette-1: var(--theme-palette-1);
@@ -31,7 +31,7 @@
   --palette-03: var(--theme-palette-03);
 }
 
-:root[data-color-scheme='dark'] {
+:root[data-color-scheme="dark"] {
   --palette-3: var(--theme-palette-03);
   --palette-2: var(--theme-palette-02);
   --palette-1: var(--theme-palette-01);
